--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,25 +1,44 @@
-
 /* General */
-html, body{
+
+html, body {
     height: 100%;
 }
 
-html body{
+html body {
     overflow-x: hidden;
 }
 
-
 /* Estructura */
-#header, #footer{
+
+#header, #footer {
     background: #f5f5f5;
 }
 
-#content div.content-start, #footer .footer-start{
+#content div.content-start, #footer .footer-start {
     padding: 8px 16px;
 }
 
-#header .btn-icon i{
+#header .btn-icon i {
     margin-right: 5px;
 }
 
+/* Messages */
 
+#content div.card.card-message .user-data-message{
+    background: #f5f5f5;
+}
+
+#content div.card.card-message .user-avatar{
+    max-width: 100px;
+    max-height: 100px;
+}
+
+
+#content div.card.card-message .registry-user,
+#content div.card.card-message .last-connection-user{
+    font-size: 11px;
+}
+
+#content div.card.card-message .username{
+    font-size: 20px;
+}
