--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -28,7 +28,7 @@ html body {
     background: #f5f5f5;
 }
 
-#content div.card.card-message .user-avatar{
+#content img.user-avatar{
     max-width: 100px;
     max-height: 100px;
 }
