--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,18 +5,42 @@ html, body {
 }
 
 html body {
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
+}
+
+.block-logo img {
+    height: 50px;
+}
+
+.greeting {
+    font-size: 20px;
 }
 
 /* Estructura */
 
 #header, #footer {
     background: #f5f5f5;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
 }
+
+#header {
+    top: 0;
+}
+
+#footer {
+    bottom: 0;
+}
+
+/* 
+#content {
+    overflow: auto;
+} */
 
 #content div.content-start, #footer .footer-start {
     padding: 8px 16px;
@@ -26,24 +50,51 @@ a:hover{
     margin-right: 5px;
 }
 
+@media (min-width: 992px) {
+    #header, #footer {
+        height: 80px;
+    }
+    #content {
+        margin-top: 110px;
+        margin-bottom: 110px;
+    }
+    .block-logo {
+        text-align: left;
+    }
+    .block-buttons{
+        text-align: right;
+    }
+}
+
+@media (max-width: 992px) {
+    #header, #footer {
+        height: 120px;
+    }
+    #content {
+        margin-top: 150px;
+        margin-bottom: 150px;
+    }
+    .block-logo, .block-buttons {
+        text-align: center;
+    }
+}
+
 /* Messages */
 
-#content div.card.card-message .user-data-message{
+#content div.card.card-message .user-data-message {
     background: #f5f5f5;
 }
 
-#content img.user-avatar{
+#content img.user-avatar {
     max-width: 100px;
     max-height: 100px;
 }
 
-
-#content div.card.card-message .registry-user,
-#content div.card.card-message .last-connection-user{
+#content div.card.card-message .registry-user, #content div.card.card-message .last-connection-user {
     font-size: 11px;
 }
 
-#content div.card.card-message .username{
+#content div.card.card-message .username {
     font-size: 20px;
 }
 
