--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,9 +24,7 @@ a:hover {
 
 #header, #footer {
     background: #f5f5f5;
-    position: fixed;
     width: 100%;
-    z-index: 999;
 }
 
 #header {
@@ -50,9 +48,68 @@ a:hover {
     margin-right: 5px;
 }
 
+/* Movil */
+
+/* @media (max-width: 576px) {
+    #header, #footer {
+        width: 100%;
+    }
+    .block-logo, .block-buttons {
+        text-align: center;
+    }
+    .block-buttons .btn {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+} */
+
+/* Movil landscape */
+
+/* @media (max-width: 768px) and (orientation: landscape) {
+    #header, #footer {
+        width: 100%;
+    }
+    .block-logo, .block-buttons {
+        text-align: center;
+    }
+    .block-buttons .btn {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+} */
+
+/* Tablet */
+
+/*@media (min-width: 576px) and (max-width: 992px) {
+    #header, #footer {
+        width: 100%;
+    }
+    .block-logo, .block-buttons {
+        text-align: center;
+    }
+    .block-buttons .btn {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+} */
+
+@media (max-width: 992px) {
+    .block-logo, .block-buttons {
+        text-align: center;
+    }
+    .block-buttons .btn {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
+/* Desktop */
+
 @media (min-width: 992px) {
     #header, #footer {
         height: 80px;
+        position: fixed;
+        z-index: 999;
     }
     #content {
         margin-top: 110px;
@@ -61,21 +118,8 @@ a:hover {
     .block-logo {
         text-align: left;
     }
-    .block-buttons{
+    .block-buttons {
         text-align: right;
-    }
-}
-
-@media (max-width: 992px) {
-    #header, #footer {
-        height: 120px;
-    }
-    #content {
-        margin-top: 150px;
-        margin-bottom: 150px;
-    }
-    .block-logo, .block-buttons {
-        text-align: center;
     }
 }
 
@@ -106,4 +150,37 @@ a:hover {
 
 .reply-fast.ck.ck-content {
     height: 200px;
+}
+
+/* Breadcumbs */
+
+ul.breadcumbs, .alert ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+ul.breadcumbs li {
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+}
+
+ul.breadcumbs li:first-child {
+    margin-left: 0px;
+}
+
+/* Admin */
+
+ul.menu-admin li a {
+    color: #FFF;
+}
+
+ul.menu-admin li a:hover {
+    color: #0073aa
+}
+
+.block-sidebar {
+    background: #23282d;
 }
